--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.4.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
