--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Backend",
   "version": "1.0.0",
-  "description": "Metube: The Backend Project",
+  "description": "EduVerse: The Backend Project",
   "type": "module",
   "main": "index.js",
   "scripts": {
