--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,1 +1,1 @@
-VITE_REACT_APP_API_URL=https://metube-backend-g4lt.onrender.com
+VITE_REACT_APP_API_URL=https://metube-backend-g4lt.onrender.com/api/v1
